# solarmon

./: Cargo.toml  LICENSE  README.md
src/: details.json  energy.json  main.rs  overview.json  sites.json
static/: chart.js  index.html  style.css
